--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -480,7 +480,7 @@
     }
 
     .single-post-wrapper header h1 {
-        font-size: 2.15rem;
+        font-size: 2rem;
     }
 
     .article-body-content {
